[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc_2025"
version = "0.1.11"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "intervaltree",
    "numpy",
    "pulp",
    "requests"
]

[tool.setuptools.packages.find]
where = ["src"]